--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>Bienvenue sur mon application de gestion de stocks</h1>
+<h1>{{title}}</h1>
 
+<app-vendeurs></app-vendeurs>
 <router-outlet></router-outlet>
