--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,3 +4,5 @@
 @import '~bootstrap/scss/bootstrap'
 
 @import './app/app.component.sass'
+@import './app/dashboard/dashboard.component.sass'
+@import './app/dashboard/dashboard.component.sass'
