--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>{{title}}</h1>
 
-<app-vendeurs></app-vendeurs>
-<app-messages></app-messages>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/vendeurs">Vendeurs</a>
+</nav>
+
 <router-outlet></router-outlet>
+<app-messages></app-messages>
