--- a/src/app/vendeurs/vendeur-detail/vendeur-detail.component.html
+++ b/src/app/vendeurs/vendeur-detail/vendeur-detail.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="vendeur">
   <h2>{{vendeur.name}}</h2>
   <div><span>id: </span>{{vendeur.id}}</div>
-  <span>Email: </span>{{vendeur.email}}
-  <span>Adresse: </span>{{vendeur.address}}
+  <div><span>Email: </span>{{vendeur.email}}</div>
+  <div><span>Adresse: </span>{{vendeur.address}}</div>
 </div>
+<button (click)="goBack()">Go back</button>
