--- a/src/app/vendeurs/vendeur-detail/vendeur-detail.component.html
+++ b/src/app/vendeurs/vendeur-detail/vendeur-detail.component.html
@@ -4,4 +4,5 @@
   <div><span>Email: </span>{{vendeur.email}}</div>
   <div><span>Adresse: </span>{{vendeur.address}}</div>
 </div>
+<button (click)="save()">Save</button>
 <button (click)="goBack()">Go back</button>
