--- a/src/app/vendeurs/vendeurs.component.html
+++ b/src/app/vendeurs/vendeurs.component.html
@@ -4,4 +4,14 @@
   <a routerLink="/detail/{{vendeur.id}}">
     <span class="badge">{{vendeur.id}}: </span> {{vendeur.name}}
   </a>
+  <button class="delete" title="delete vendeur" (click)="delete(vendeur)">X</button>
 </ul>
+
+<div>
+  <label for="new-vendeur">Nom vendeur: </label>
+  <input id="new-vendeur" #vendeurName />
+
+  <button class="add-button" (click)="add(vendeurName.value); vendeurName.value=''">
+    Ajouter vendeur
+  </button>
+</div>
